--- a/WhatisSPENDWISE.html
+++ b/WhatisSPENDWISE.html
@@ -124,7 +124,7 @@
     <header>
         <img src="WhatsApp_Image_2024-09-14_at_17.13.41_548e2aef-removebg[1].png" alt="SpendWise Logo" class="header-logo"> <!-- Add your logo image here -->
         <ul class="nav-links">
-            <li><a href="FirstPage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="WalletPage.html">Wallet</a></li>
             <li><a href="FeaturesPage.html">Features</a></li>
             <li><a href="#">Refer & Earn</a></li>
